# thin-edge.io

./: .gitignore  Cargo.toml  PKI_INTERFACE.md  get-tedge.sh  justfile
.config/: nextest.toml
.devcontainer/: Dockerfile
.github/workflows/: autotag.yml  build-workflow.yml  ci-windows.yml  gh-pages.yml  integration-tests.yml  update-community-projects.yml
ci/: package_list.sh
ci/admin/: cloudsmith_admin.sh  update-community-projects.sh  workflow_history.sh
ci/build_scripts/: build.sh  convert_linux_packages.sh  host-macos.sh  package.sh  publish_debian.sh  publish_packages.sh  version.sh
common/certificate/: Cargo.toml
common/mqtt_client/: Cargo.toml
configuration/package_manifests/: nfpm.c8y-configuration-plugin.yaml  nfpm.c8y-firmware-plugin.yaml  nfpm.c8y-log-plugin.yaml  nfpm.c8y-remote-access-plugin.yaml  nfpm.sawtooth-publisher.yaml  nfpm.tedge-agent.yaml  nfpm.tedge-apt-plugin.yaml  nfpm.tedge-flows.yaml  nfpm.tedge-mapper.yaml  nfpm.tedge-p11-server.yaml  nfpm.tedge-watchdog.yaml  nfpm.tedge.yaml
configuration/package_scripts/: generate.py  packages.json
crates/extensions/tedge_script_ext/: Cargo.toml
crates/extensions/tedge_script_ext/src/: lib.rs
docs/: windows-porting-status.md
html/: 001_overview.html  404.html  BUILDING.html  SUMMARY.html  api.html  dev_doc.html  index.html  overview.html  print.html  searchindex.js  searchindex.json  supported-platforms.html  user_doc.html
html/extend/: index.html  (+2 more)
mk/: cargo.sh  install-build-tools-all-targets.sh  install-build-tools.sh  release.sh
tedge/: Cargo.toml
tedge_config/: Cargo.toml
(+592 files in other folders)
