[package]
name = "tedge_script_ext"
description = "thin-edge extension adding script support"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
async-trait = { workspace = true }
shell-words = { workspace = true }
tedge_actors = { workspace = true }
tokio = { workspace = true, default_features = false, features = ["process"] }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, default_features = false, features = [
    "macros",
    "rt-multi-thread",
] }

[lints]
workspace = true
